@@ -125,7 +125,7 @@ public class VoterServiceImpl implements VoterService {
         var oldVoter = new Voter();
         BeanUtils.copyProperties(existingVoter, oldVoter);
         var oldResidentialAddress = new Address();
-        BeanUtils.copyProperties(existingVoter.getAddress().getFirst(), oldResidentialAddress);
+        BeanUtils.copyProperties(existingVoter.getAddress().get(0), oldResidentialAddress);
         var oldMailingAddress = new Address();
         BeanUtils.copyProperties(existingVoter.getAddress().stream().filter(address -> address.getAddressType().equals(AddressType.MAILING)).findFirst().orElseThrow(), oldMailingAddress);
         var oldAddressList = List.of(oldResidentialAddress, oldMailingAddress);
